fix - detector display not visible

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,9 +20,10 @@ html, body {
   position: absolute;
   z-index: 100;
 }
-.instruments .view {
+.detectorDisplay {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100vw;
+  z-index: 100;
 }
